--- a/Exercises/c2-l3-e1-STUDENT.ipynb
+++ b/Exercises/c2-l3-e1-STUDENT.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95c38983-59ee-4cc1-8014-8befef7b75cc",
    "metadata": {},
    "outputs": [],
@@ -33,24 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "16691348-683e-4eb7-baac-ef1e62740e31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_ticker = ''\n",
-    "start_date = '' # use format YYYY-MM-DD\n",
-    "end_date = ''"
+    "stock_ticker = 'TSLA'\n",
+    "start_date = '2022-01-01' # use format YYYY-MM-DD\n",
+    "end_date = '2024-01-01'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "47db4008-40f1-47fa-a91e-b5788b1d98c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Shiv Patel\\AppData\\Local\\Temp\\ipykernel_29932\\399448886.py:1: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  data = yf.download(tickers=stock_ticker, start=start_date, end=end_date)\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
    "source": [
-    "data = yf.download( ... ) # replace ... inside this function with the correct parameters in order to get your data"
+    "data = yf.download(tickers=stock_ticker, start=start_date, end=end_date)"
    ]
   },
   {
@@ -68,12 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b9338e55-1764-4411-bbea-d3f52a6c5f12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['10_day_momentum'] = ... # replace ... to get the answer"
+    "data['10_day_momentum'] = data['Close'].pct_change(periods=10)"
    ]
   },
   {
@@ -88,34 +98,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "80e8373a-b82c-4b35-8692-618d294761d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['EMA_12'] = ... #replace ...\n",
-    "data['EMA_26'] = ... #replace ..."
+    "data['EMA_12'] = data['Close'].ewm(span=12).mean()\n",
+    "data['EMA_26'] = data['Close'].ewm(span=26).mean()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a132f0b0-e615-4342-a004-4c88c83e762a",
+   "id": "c6eac023-19fc-4fbc-9846-b4de6d7b68df",
    "metadata": {},
    "source": [
     "**Manually calculate the MACD (moving average convergence divergence)**\n",
     "\n",
-    "Recall that the MACD is calculated as the 12-day exponential moving average minus the 26-day. Use the above step to calculate the MACD. You'll have to create your own column for this step. \n"
+    "Recall that the MACD is calculated as the 12-day exponential moving average minus the 26-day. Use the above step to calculate the MACD. You'll have to create your own column for this step. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f06753e5-4ad4-421c-aa4e-c6208dadc70a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate the MACD and save it to a new column in your dataframe \n",
-    "\n"
+    "\n",
+    "data['MACD'] = data['EMA_12'] - data['EMA_26']"
    ]
   },
   {
@@ -130,14 +141,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "aa8f61e8-48c3-4945-b3cf-fcb187cecd44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the MACD signal using the above MACD using only Pandas methods (don't use the ta library shown in the demo) \n",
+    "# calculate the MACD signal using the above MACD using only Pandas methods\n",
+    "# (don't use the ta library shown in the demo) \n",
     "\n",
-    "\n"
+    "data['MACD_Signal'] = data['MACD'].ewm(span=10).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d3909c0-d3d1-4e8d-ac2e-e48e821adcb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>10_day_momentum</th>\n",
+       "      <th>EMA_12</th>\n",
+       "      <th>EMA_26</th>\n",
+       "      <th>MACD</th>\n",
+       "      <th>MACD_Signal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-01-18</th>\n",
+       "      <td>343.503326</td>\n",
+       "      <td>356.929993</td>\n",
+       "      <td>338.686676</td>\n",
+       "      <td>342.203339</td>\n",
+       "      <td>66743400</td>\n",
+       "      <td>-0.141084</td>\n",
+       "      <td>354.171332</td>\n",
+       "      <td>356.871075</td>\n",
+       "      <td>-2.699742</td>\n",
+       "      <td>-2.098344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-19</th>\n",
+       "      <td>331.883331</td>\n",
+       "      <td>351.556671</td>\n",
+       "      <td>331.666656</td>\n",
+       "      <td>347.236664</td>\n",
+       "      <td>75442500</td>\n",
+       "      <td>-0.133909</td>\n",
+       "      <td>350.208599</td>\n",
+       "      <td>353.800937</td>\n",
+       "      <td>-3.592338</td>\n",
+       "      <td>-2.396841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-20</th>\n",
+       "      <td>332.089996</td>\n",
+       "      <td>347.220001</td>\n",
+       "      <td>331.333344</td>\n",
+       "      <td>336.576660</td>\n",
+       "      <td>70488600</td>\n",
+       "      <td>-0.084412</td>\n",
+       "      <td>347.062521</td>\n",
+       "      <td>351.257504</td>\n",
+       "      <td>-4.194983</td>\n",
+       "      <td>-2.749761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-21</th>\n",
+       "      <td>314.633331</td>\n",
+       "      <td>334.850006</td>\n",
+       "      <td>313.500000</td>\n",
+       "      <td>332.113342</td>\n",
+       "      <td>103416000</td>\n",
+       "      <td>-0.113459</td>\n",
+       "      <td>341.540866</td>\n",
+       "      <td>347.144173</td>\n",
+       "      <td>-5.603308</td>\n",
+       "      <td>-3.301846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-24</th>\n",
+       "      <td>310.000000</td>\n",
+       "      <td>311.170013</td>\n",
+       "      <td>283.823334</td>\n",
+       "      <td>301.586670</td>\n",
+       "      <td>151565700</td>\n",
+       "      <td>-0.094415</td>\n",
+       "      <td>336.257231</td>\n",
+       "      <td>343.126084</td>\n",
+       "      <td>-6.868853</td>\n",
+       "      <td>-3.984016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-22</th>\n",
+       "      <td>252.539993</td>\n",
+       "      <td>258.220001</td>\n",
+       "      <td>251.369995</td>\n",
+       "      <td>256.760010</td>\n",
+       "      <td>93370100</td>\n",
+       "      <td>0.035679</td>\n",
+       "      <td>248.348833</td>\n",
+       "      <td>243.125002</td>\n",
+       "      <td>5.223831</td>\n",
+       "      <td>4.302673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-26</th>\n",
+       "      <td>256.609985</td>\n",
+       "      <td>257.970001</td>\n",
+       "      <td>252.910004</td>\n",
+       "      <td>254.490005</td>\n",
+       "      <td>86892400</td>\n",
+       "      <td>0.070368</td>\n",
+       "      <td>249.619780</td>\n",
+       "      <td>244.123890</td>\n",
+       "      <td>5.495890</td>\n",
+       "      <td>4.519621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-27</th>\n",
+       "      <td>261.440002</td>\n",
+       "      <td>263.339996</td>\n",
+       "      <td>257.519989</td>\n",
+       "      <td>258.350006</td>\n",
+       "      <td>106494400</td>\n",
+       "      <td>0.103076</td>\n",
+       "      <td>251.438276</td>\n",
+       "      <td>245.406565</td>\n",
+       "      <td>6.031711</td>\n",
+       "      <td>4.794547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-28</th>\n",
+       "      <td>253.179993</td>\n",
+       "      <td>265.130005</td>\n",
+       "      <td>252.710007</td>\n",
+       "      <td>263.660004</td>\n",
+       "      <td>113619900</td>\n",
+       "      <td>0.058047</td>\n",
+       "      <td>251.706232</td>\n",
+       "      <td>245.982374</td>\n",
+       "      <td>5.723858</td>\n",
+       "      <td>4.963512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29</th>\n",
+       "      <td>248.479996</td>\n",
+       "      <td>255.190002</td>\n",
+       "      <td>247.429993</td>\n",
+       "      <td>255.100006</td>\n",
+       "      <td>100891600</td>\n",
+       "      <td>-0.010237</td>\n",
+       "      <td>251.209888</td>\n",
+       "      <td>246.167383</td>\n",
+       "      <td>5.042505</td>\n",
+       "      <td>4.977875</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>491 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Price            Close        High         Low        Open     Volume  \\\n",
+       "Ticker            TSLA        TSLA        TSLA        TSLA       TSLA   \n",
+       "Date                                                                    \n",
+       "2022-01-18  343.503326  356.929993  338.686676  342.203339   66743400   \n",
+       "2022-01-19  331.883331  351.556671  331.666656  347.236664   75442500   \n",
+       "2022-01-20  332.089996  347.220001  331.333344  336.576660   70488600   \n",
+       "2022-01-21  314.633331  334.850006  313.500000  332.113342  103416000   \n",
+       "2022-01-24  310.000000  311.170013  283.823334  301.586670  151565700   \n",
+       "...                ...         ...         ...         ...        ...   \n",
+       "2023-12-22  252.539993  258.220001  251.369995  256.760010   93370100   \n",
+       "2023-12-26  256.609985  257.970001  252.910004  254.490005   86892400   \n",
+       "2023-12-27  261.440002  263.339996  257.519989  258.350006  106494400   \n",
+       "2023-12-28  253.179993  265.130005  252.710007  263.660004  113619900   \n",
+       "2023-12-29  248.479996  255.190002  247.429993  255.100006  100891600   \n",
+       "\n",
+       "Price      10_day_momentum      EMA_12      EMA_26      MACD MACD_Signal  \n",
+       "Ticker                                                                    \n",
+       "Date                                                                      \n",
+       "2022-01-18       -0.141084  354.171332  356.871075 -2.699742   -2.098344  \n",
+       "2022-01-19       -0.133909  350.208599  353.800937 -3.592338   -2.396841  \n",
+       "2022-01-20       -0.084412  347.062521  351.257504 -4.194983   -2.749761  \n",
+       "2022-01-21       -0.113459  341.540866  347.144173 -5.603308   -3.301846  \n",
+       "2022-01-24       -0.094415  336.257231  343.126084 -6.868853   -3.984016  \n",
+       "...                    ...         ...         ...       ...         ...  \n",
+       "2023-12-22        0.035679  248.348833  243.125002  5.223831    4.302673  \n",
+       "2023-12-26        0.070368  249.619780  244.123890  5.495890    4.519621  \n",
+       "2023-12-27        0.103076  251.438276  245.406565  6.031711    4.794547  \n",
+       "2023-12-28        0.058047  251.706232  245.982374  5.723858    4.963512  \n",
+       "2023-12-29       -0.010237  251.209888  246.167383  5.042505    4.977875  \n",
+       "\n",
+       "[491 rows x 10 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "display(data)"
    ]
   }
  ],
@@ -157,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
