--- a/Project/Preparing-for-data-analysis-project-student.ipynb
+++ b/Project/Preparing-for-data-analysis-project-student.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "882241d4",
    "metadata": {},
    "outputs": [],
@@ -69,23 +69,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bd119016",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load historical GDP data\n",
-    "\n"
+    "GDP_data = pd.read_csv('GDP.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cf36d7c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1947-01-01</td>\n",
+       "      <td>243.164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1947-04-01</td>\n",
+       "      <td>245.968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1947-07-01</td>\n",
+       "      <td>249.585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1947-10-01</td>\n",
+       "      <td>259.745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1948-01-01</td>\n",
+       "      <td>265.742</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE      GDP\n",
+       "0  1947-01-01  243.164\n",
+       "1  1947-04-01  245.968\n",
+       "2  1947-07-01  249.585\n",
+       "3  1947-10-01  259.745\n",
+       "4  1948-01-01  265.742"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check the first few rows of data\n"
+    "# Check the first few rows of data\n",
+    "GDP_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5833324b-a8bf-4bca-b54a-f23bd9a346b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 309 entries, 0 to 308\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   DATE    309 non-null    object \n",
+      " 1   GDP     309 non-null    float64\n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 5.0+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>309.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7227.754935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7478.297734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>243.164000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>804.981000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4386.773000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12527.214000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>28284.498000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                GDP\n",
+       "count    309.000000\n",
+       "mean    7227.754935\n",
+       "std     7478.297734\n",
+       "min      243.164000\n",
+       "25%      804.981000\n",
+       "50%     4386.773000\n",
+       "75%    12527.214000\n",
+       "max    28284.498000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Explore GDP df structure and descriptive statistics\n",
+    "print(GDP_data.info())\n",
+    "display(GDP_data.describe())"
    ]
   },
   {
@@ -95,28 +270,421 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the historical stock price data for Apple and Microsoft\n"
+    "# Load the historical stock price data for Apple and Microsoft\n",
+    "AAPL_data = pd.read_csv('apple_historical_data.csv')\n",
+    "MSFT_data = pd.read_csv('microsoft_historical_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e9e9a77a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close/Last</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5/3/2024</td>\n",
+       "      <td>$183.38</td>\n",
+       "      <td>163224100</td>\n",
+       "      <td>$186.65</td>\n",
+       "      <td>$187.00</td>\n",
+       "      <td>$182.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5/2/2024</td>\n",
+       "      <td>$173.03</td>\n",
+       "      <td>94214920</td>\n",
+       "      <td>$172.51</td>\n",
+       "      <td>$173.42</td>\n",
+       "      <td>$170.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5/1/2024</td>\n",
+       "      <td>$169.30</td>\n",
+       "      <td>50383150</td>\n",
+       "      <td>$169.58</td>\n",
+       "      <td>$172.71</td>\n",
+       "      <td>$169.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4/30/2024</td>\n",
+       "      <td>$170.33</td>\n",
+       "      <td>65934780</td>\n",
+       "      <td>$173.33</td>\n",
+       "      <td>$174.99</td>\n",
+       "      <td>$170.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4/29/2024</td>\n",
+       "      <td>$173.50</td>\n",
+       "      <td>68169420</td>\n",
+       "      <td>$173.37</td>\n",
+       "      <td>$176.03</td>\n",
+       "      <td>$173.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date Close/Last     Volume      Open      High       Low\n",
+       "0   5/3/2024   $183.38   163224100  $186.65   $187.00   $182.66 \n",
+       "1   5/2/2024   $173.03    94214920  $172.51   $173.42   $170.89 \n",
+       "2   5/1/2024   $169.30    50383150  $169.58   $172.71   $169.11 \n",
+       "3  4/30/2024   $170.33    65934780  $173.33   $174.99   $170.00 \n",
+       "4  4/29/2024   $173.50    68169420  $173.37   $176.03   $173.10 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close/Last</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>05/03/2024</td>\n",
+       "      <td>$406.66</td>\n",
+       "      <td>17446720</td>\n",
+       "      <td>$402.28</td>\n",
+       "      <td>$407.15</td>\n",
+       "      <td>$401.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>05/02/2024</td>\n",
+       "      <td>$397.84</td>\n",
+       "      <td>17709360</td>\n",
+       "      <td>$397.66</td>\n",
+       "      <td>$399.93</td>\n",
+       "      <td>$394.6515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>05/01/2024</td>\n",
+       "      <td>$394.94</td>\n",
+       "      <td>23562480</td>\n",
+       "      <td>$392.61</td>\n",
+       "      <td>$401.7199</td>\n",
+       "      <td>$390.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>04/30/2024</td>\n",
+       "      <td>$389.33</td>\n",
+       "      <td>28781370</td>\n",
+       "      <td>$401.49</td>\n",
+       "      <td>$402.16</td>\n",
+       "      <td>$389.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>04/29/2024</td>\n",
+       "      <td>$402.25</td>\n",
+       "      <td>19582090</td>\n",
+       "      <td>$405.25</td>\n",
+       "      <td>$406.32</td>\n",
+       "      <td>$399.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date Close/Last    Volume     Open       High        Low\n",
+       "0  05/03/2024    $406.66  17446720  $402.28    $407.15    $401.86\n",
+       "1  05/02/2024    $397.84  17709360  $397.66    $399.93  $394.6515\n",
+       "2  05/01/2024    $394.94  23562480  $392.61  $401.7199    $390.31\n",
+       "3  04/30/2024    $389.33  28781370  $401.49    $402.16    $389.17\n",
+       "4  04/29/2024    $402.25  19582090  $405.25    $406.32    $399.19"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Check the first few rows of data\n"
+    "# Check the first few rows of data\n",
+    "display(AAPL_data.head())\n",
+    "display(MSFT_data.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8c9bed17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2517 entries, 0 to 2516\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   Date        2517 non-null   object\n",
+      " 1   Close/Last  2514 non-null   object\n",
+      " 2   Volume      2517 non-null   int64 \n",
+      " 3   Open        2517 non-null   object\n",
+      " 4   High        2517 non-null   object\n",
+      " 5   Low         2517 non-null   object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 118.1+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.517000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.277394e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.357405e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.404834e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.741776e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.077601e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.567789e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.576780e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Volume\n",
+       "count  2.517000e+03\n",
+       "mean   1.277394e+08\n",
+       "std    7.357405e+07\n",
+       "min    2.404834e+07\n",
+       "25%    7.741776e+07\n",
+       "50%    1.077601e+08\n",
+       "75%    1.567789e+08\n",
+       "max    7.576780e+08"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Use methods like .info() and .describe() to explore the data\n",
-    "\n"
+    "# Use methods like .info() and .describe() to explore stock data\n",
+    "print(AAPL_data.info())\n",
+    "display(AAPL_data.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b34abb7d-7075-4c40-9194-5d6182658c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2517 entries, 0 to 2516\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   Date        2517 non-null   object\n",
+      " 1   Close/Last  2517 non-null   object\n",
+      " 2   Volume      2517 non-null   int64 \n",
+      " 3   Open        2517 non-null   object\n",
+      " 4   High        2517 non-null   object\n",
+      " 5   Low         2517 non-null   object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 118.1+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.517000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.953106e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.370138e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>7.425603e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.131892e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.639470e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.360003e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.025141e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Volume\n",
+       "count  2.517000e+03\n",
+       "mean   2.953106e+07\n",
+       "std    1.370138e+07\n",
+       "min    7.425603e+06\n",
+       "25%    2.131892e+07\n",
+       "50%    2.639470e+07\n",
+       "75%    3.360003e+07\n",
+       "max    2.025141e+08"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(MSFT_data.info())\n",
+    "display(MSFT_data.describe())"
    ]
   },
   {
