Dollar and datetime column cleaning

--- a/Project/Preparing-for-data-analysis-project-student.ipynb
+++ b/Project/Preparing-for-data-analysis-project-student.ipynb
@@ -699,33 +699,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4807173e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close/Last</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>4/8/2024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37425510</td>\n",
+       "      <td>$169.03</td>\n",
+       "      <td>$169.20</td>\n",
+       "      <td>$168.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>1/26/2024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44594010</td>\n",
+       "      <td>$194.27</td>\n",
+       "      <td>$194.76</td>\n",
+       "      <td>$191.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>11/20/2023</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46538610</td>\n",
+       "      <td>$189.89</td>\n",
+       "      <td>$191.91</td>\n",
+       "      <td>$189.88</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date Close/Last    Volume      Open      High       Low\n",
+       "19     4/8/2024        NaN  37425510  $169.03   $169.20   $168.24 \n",
+       "68    1/26/2024        NaN  44594010  $194.27   $194.76   $191.94 \n",
+       "113  11/20/2023        NaN  46538610  $189.89   $191.91   $189.88 "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check for nulls \n",
-    "\n"
+    "AAPL_data[AAPL_data.isna().any(axis=1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "00e4d6f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Forward fill any missing data\n"
+    "# Forward fill any missing Adata\n",
+    "AAPL_data = AAPL_data.ffill()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f82d3b2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close/Last</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Date, Close/Last, Volume, Open, High, Low]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check again for nulls after using forward fill\n"
+    "# Check again for nulls after using forward fill\n",
+    "AAPL_data[AAPL_data.isna().any(axis=1)]"
    ]
   },
   {
@@ -744,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a47537af",
    "metadata": {},
    "outputs": [],
@@ -761,42 +881,80 @@
     "        Returns:\n",
     "            None - changes to the dataframe can be made in place\n",
     "    '''\n",
-    "    \n",
-    "    \n",
-    "    pass "
+    "    for col in numeric_columns:\n",
+    "        df[col] = df[col].replace({'\\$': ''}, regex=True).astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "055f8621",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use convert_dollar_columns_to_numeric() to remove the dollar sign from the Apple and Microsoft datasets\n",
-    "\n"
+    "numeric_columns = ['Close/Last', 'Volume', 'Open', 'High', 'Low']\n",
+    "convert_dollar_columns_to_numeric(AAPL_data, numeric_columns)\n",
+    "convert_dollar_columns_to_numeric(MSFT_data, numeric_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "efea17ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use pandas's to_datetime() to convert any columns that are in a datetime format\n",
-    "\n"
+    "AAPL_data['Date'] = pd.to_datetime(AAPL_data['Date'])\n",
+    "MSFT_data['Date'] = pd.to_datetime(MSFT_data['Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8a2089e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2517 entries, 0 to 2516\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column      Non-Null Count  Dtype         \n",
+      "---  ------      --------------  -----         \n",
+      " 0   Date        2517 non-null   datetime64[ns]\n",
+      " 1   Close/Last  2517 non-null   float64       \n",
+      " 2   Volume      2517 non-null   float64       \n",
+      " 3   Open        2517 non-null   float64       \n",
+      " 4   High        2517 non-null   float64       \n",
+      " 5   Low         2517 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(5)\n",
+      "memory usage: 118.1 KB\n",
+      "None\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2517 entries, 0 to 2516\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column      Non-Null Count  Dtype         \n",
+      "---  ------      --------------  -----         \n",
+      " 0   Date        2517 non-null   datetime64[ns]\n",
+      " 1   Close/Last  2517 non-null   float64       \n",
+      " 2   Volume      2517 non-null   float64       \n",
+      " 3   Open        2517 non-null   float64       \n",
+      " 4   High        2517 non-null   float64       \n",
+      " 5   Low         2517 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(5)\n",
+      "memory usage: 118.1 KB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Use .info() and check the type of each column to ensure that the above steps worked\n",
-    "\n"
+    "print(AAPL_data.info())\n",
+    "print(MSFT_data.info())"
    ]
   },
   {
